--- a/app/src/main/res/layout/act_satelite.xml
+++ b/app/src/main/res/layout/act_satelite.xml
@@ -2,11 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinatorLayout3"
+    android:id="@+id/coordinatorLayout14"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActPlaneta">
-
+    tools:context=".ActSatelite">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout2"
@@ -58,7 +57,7 @@
                 android:text="Tamanho: "
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_gravidade" />
+                app:layout_constraintTop_toBottomOf="@+id/txt_id" />
 
             <TextView
                 android:id="@+id/txt_id"
@@ -79,7 +78,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_tamanho"
+                app:layout_constraintTop_toBottomOf="@+id/txt_massa"
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
@@ -90,17 +89,9 @@
                 android:text="Massa:"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_id" />
+                app:layout_constraintTop_toBottomOf="@+id/txt_tamanho" />
 
-            <TextView
-                android:id="@+id/txt_gravidade"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Gravidade:"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_massa" />
+
 
             <Button
                 android:id="@+id/btn_remover"
@@ -114,5 +105,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/txt_comp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
