--- a/app/src/main/res/layout/act_sistema.xml
+++ b/app/src/main/res/layout/act_sistema.xml
@@ -2,11 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinatorLayout3"
+    android:id="@+id/coordinatorLayout13"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActPlaneta">
-
+    tools:context=".ActSistema">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout2"
@@ -51,14 +50,14 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/txt_tamanho"
+                android:id="@+id/txt_qtde_planetas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Tamanho: "
+                android:text="Quantidade de Planetas:"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_gravidade" />
+                app:layout_constraintTop_toBottomOf="@+id/txt_id" />
 
             <TextView
                 android:id="@+id/txt_id"
@@ -71,36 +70,26 @@
                 app:layout_constraintTop_toBottomOf="@+id/txt_nome" />
 
             <TextView
-                android:id="@+id/txt_comp"
+                android:id="@+id/txt_qtde_estrelas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Composição: "
+                android:text="Quantidade de Estrelas:"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_tamanho"
+                app:layout_constraintTop_toBottomOf="@+id/txt_qtde_planetas"
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/txt_massa"
+                android:id="@+id/txt_idade"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Massa:"
+                android:text="Idade:"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_id" />
-
-            <TextView
-                android:id="@+id/txt_gravidade"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Gravidade:"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_massa" />
+                app:layout_constraintTop_toBottomOf="@+id/txt_qtde_estrelas" />
 
             <Button
                 android:id="@+id/btn_remover"
@@ -111,8 +100,9 @@
                 android:text="@string/remover"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_comp" />
+                app:layout_constraintTop_toBottomOf="@+id/txt_idade" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
