--- a/app/src/main/res/layout/act_adicionar_sistema.xml
+++ b/app/src/main/res/layout/act_adicionar_sistema.xml
@@ -140,26 +140,44 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:layout_marginBottom="24dp"
+                android:layout_marginBottom="32dp"
                 android:onClick="clickBtnAdicionarSistema"
                 android:text="@string/adicionar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edt_idade" />
+                app:layout_constraintTop_toBottomOf="@+id/edt_id_galaxia" />
 
             <Button
                 android:id="@+id/btn_modificar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:layout_marginBottom="24dp"
                 android:onClick="clickBtnModificarSistema"
                 android:text="@string/modificar"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edt_id_galaxia" />
+
+            <EditText
+                android:id="@+id/edt_id_galaxia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edt_idade" />
+
+            <TextView
+                android:id="@+id/lbl_id_galaxia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ID Galáxia"
+                app:layout_constraintBottom_toTopOf="@+id/edt_id_galaxia"
+                app:layout_constraintStart_toStartOf="@+id/edt_id_galaxia" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
