--- a/app/src/main/res/layout/act_planeta.xml
+++ b/app/src/main/res/layout/act_planeta.xml
@@ -111,6 +111,16 @@
                 android:text="@string/remover"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txt_velocidade" />
+
+            <TextView
+                android:id="@+id/txt_velocidade"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="17dp"
+                android:text="Velocidade de Rotação:"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_comp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
