--- a/app/src/main/res/layout/act_adicionar_sistema.xml
+++ b/app/src/main/res/layout/act_adicionar_sistema.xml
@@ -166,7 +166,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="numberSigned"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edt_idade" />
