--- a/app/src/main/res/layout/act_sistema.xml
+++ b/app/src/main/res/layout/act_sistema.xml
@@ -100,6 +100,16 @@
                 android:text="@string/remover"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txt_id_galaxia" />
+
+            <TextView
+                android:id="@+id/txt_id_galaxia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="ID Galáxia"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_idade" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
