--- a/app/src/main/res/layout/act_adicionar_estrela.xml
+++ b/app/src/main/res/layout/act_adicionar_estrela.xml
@@ -160,7 +160,7 @@
                 android:id="@+id/tipoEstrela"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="64dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edtIdade">
@@ -229,8 +229,16 @@
                 android:text="Tipo de estrela"
                 app:layout_constraintBottom_toTopOf="@+id/tipoEstrela"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnRadioMorte" />
 
+            <RadioButton
+                android:id="@+id/btnRadioMorte"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_radio_morreu"
+                app:layout_constraintStart_toStartOf="@+id/edtIdade"
+                app:layout_constraintTop_toBottomOf="@+id/edtIdade" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
