--- a/app/src/main/res/layout/fragment_listar.xml
+++ b/app/src/main/res/layout/fragment_listar.xml
@@ -98,5 +98,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_estrela" />
 
+    <Button
+        android:id="@+id/btn_buracos_negros"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/btn_lista_buraco_negro"
+        app:layout_constraintEnd_toEndOf="@+id/btn_sistemas_de_uma_galaxia"
+        app:layout_constraintStart_toStartOf="@+id/btn_sistemas_de_uma_galaxia"
+        app:layout_constraintTop_toBottomOf="@+id/btn_sistemas_de_uma_galaxia" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
