--- a/app/src/main/res/layout/act_adicionarplaneta.xml
+++ b/app/src/main/res/layout/act_adicionarplaneta.xml
@@ -157,7 +157,7 @@
 
 
             <Button
-                android:id="@+id/btn_adicionar"
+                android:id="@+id/btn_remover_pertencimento"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
