--- a/app/src/main/res/layout/fragment_listar.xml
+++ b/app/src/main/res/layout/fragment_listar.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
 
         <TextView
             android:id="@+id/textEscolha"
@@ -109,55 +115,48 @@
             app:layout_constraintStart_toStartOf="@+id/btn_sistemas_de_uma_galaxia"
             app:layout_constraintTop_toBottomOf="@+id/btn_sistemas_de_uma_galaxia" />
 
-    <Button
-        android:id="@+id/btn_planetas_sistema"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Planetas de Um Sistema"
-        app:layout_constraintEnd_toEndOf="@+id/btn_buracos_negros"
-        app:layout_constraintStart_toStartOf="@+id/btn_buracos_negros"
-        app:layout_constraintTop_toBottomOf="@+id/btn_buracos_negros" />
+        <Button
+            android:id="@+id/btn_planetas_sistema"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Planetas de Um Sistema"
+            app:layout_constraintEnd_toEndOf="@+id/btn_buracos_negros"
+            app:layout_constraintStart_toStartOf="@+id/btn_buracos_negros"
+            app:layout_constraintTop_toBottomOf="@+id/btn_buracos_negros" />
 
-    <Button
-        android:id="@+id/btn_estrela_sistema"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Estrelas de Um Sistema"
-        app:layout_constraintEnd_toEndOf="@+id/btn_planetas_sistema"
-        app:layout_constraintStart_toStartOf="@+id/btn_planetas_sistema"
-        app:layout_constraintTop_toBottomOf="@+id/btn_planetas_sistema" />
+        <Button
+            android:id="@+id/btn_estrela_sistema"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Estrelas de Um Sistema"
+            app:layout_constraintEnd_toEndOf="@+id/btn_planetas_sistema"
+            app:layout_constraintStart_toStartOf="@+id/btn_planetas_sistema"
+            app:layout_constraintTop_toBottomOf="@+id/btn_planetas_sistema" />
 
-    <Button
-        android:id="@+id/btn_orbita_planeta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Órbita de um Planeta"
-        app:layout_constraintEnd_toEndOf="@+id/btn_estrela_sistema"
-        app:layout_constraintStart_toStartOf="@+id/btn_estrela_sistema"
-        app:layout_constraintTop_toBottomOf="@+id/btn_estrela_sistema" />
+        <Button
+            android:id="@+id/btn_orbita_planeta"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Órbita de um Planeta"
+            app:layout_constraintEnd_toEndOf="@+id/btn_estrela_sistema"
+            app:layout_constraintStart_toStartOf="@+id/btn_estrela_sistema"
+            app:layout_constraintTop_toBottomOf="@+id/btn_estrela_sistema" />
 
-    <Button
-        android:id="@+id/btn_orbita_estrela"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Órbita de uma Estrela"
-        app:layout_constraintEnd_toEndOf="@+id/btn_orbita_planeta"
-        app:layout_constraintStart_toStartOf="@+id/btn_orbita_planeta"
-        app:layout_constraintTop_toBottomOf="@+id/btn_orbita_planeta" />
-
-    <Button
-        android:id="@+id/btn_orbita_satelite"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Órbita de um Satélite Natural"
-        app:layout_constraintEnd_toEndOf="@+id/btn_orbita_estrela"
-        app:layout_constraintStart_toStartOf="@+id/btn_orbita_estrela"
-        app:layout_constraintTop_toBottomOf="@+id/btn_orbita_estrela" />
+        <Button
+            android:id="@+id/btn_orbita_estrela"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Órbita de uma Estrela"
+            app:layout_constraintEnd_toEndOf="@+id/btn_orbita_planeta"
+            app:layout_constraintStart_toStartOf="@+id/btn_orbita_planeta"
+            app:layout_constraintTop_toBottomOf="@+id/btn_orbita_planeta" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
+
+
