--- a/app/src/main/res/layout/act_planeta.xml
+++ b/app/src/main/res/layout/act_planeta.xml
@@ -111,17 +111,27 @@
                 android:text="@string/remover"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_velocidade" />
+                app:layout_constraintTop_toBottomOf="@+id/txt_aviso" />
 
             <TextView
                 android:id="@+id/txt_velocidade"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="17dp"
+                android:layout_marginTop="24dp"
                 android:text="Velocidade de Rotação:"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_comp" />
+
+            <TextView
+                android:id="@+id/txt_aviso"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/txt_velocidade"
+                app:layout_constraintStart_toStartOf="@+id/txt_velocidade"
+                app:layout_constraintTop_toBottomOf="@+id/txt_velocidade" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
